--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <meta charset="UTF-8" />
-    <title>Curso AnguelarJS</title>
+    <title>Curso AngularJS</title>
     <head>
 
     </head>
